force-app/main/default/objects/Membership_Subscription__c/Membership_Subscription__c.object-meta.xml
<CustomObject>
    <description>Custom object that holds all Welco and user memberships and subscriptions</description>
    <label>Membership/Subscription</label>
    <nameField>
        <displayFormat>MS-{000000}</displayFormat>
        <label>Membership/Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships &amp; Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>