force-app/main/default/objects/Membership_Subscription__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the membership or subscription is currently active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>