force-app/main/default/objects/Membership_Subscription__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Long text area to provide additional details regarding membership and subscription details</description>
    <label>Additional Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>