force-app/main/default/objects/Membership_Subscription__c/fields/Approved_by_Management__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Management__c</fullName>
    <description>Updated automatically when submitted for approval</description>
    <label>Approved by Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approved_by_Management</valueSetName>
    </valueSet>
</CustomField>