force-app/main/default/objects/Membership_Subscription__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>First day the Membership/Subscription will be active</description>
    <inlineHelpText>First day the Membership/Subscription will be active</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>