force-app/main/default/objects/Membership_Subscription__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ties the contact to the membership or subscription</description>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Welco Expediting Ltd.</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Welco Manufacturing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Memberships &amp; Subscriptions</relationshipLabel>
    <relationshipName>Memberships_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>