force-app/main/default/objects/Membership_Subscription__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date of Membership or Subscription</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>