force-app/main/default/objects/Membership_Subscription__c/fields/Membership_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID_Number__c</fullName>
    <description>Unique number tied to the user</description>
    <inlineHelpText>This should be a unique number associated with the employee</inlineHelpText>
    <label>Membership ID Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>