force-app/main/default/objects/Membership_Subscription__c/fields/Number_of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licenses__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of Licenses for the total subscription amount</description>
    <label>Number of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>