force-app/main/default/objects/Membership_Subscription__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Membership/Subscription to a business or organization</description>
    <inlineHelpText>Search for the business or organization. If it does not exist, create a new Account.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memberships &amp; Subscriptions</relationshipLabel>
    <relationshipName>Memberships_SubscriptionsAccount</relationshipName>
    <type>Lookup</type>
</CustomField>