force-app/main/default/objects/Membership_Subscription__c/fields/Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Organization_Website__c</fullName>
    <description>References Account Website on the Membership/Subscription record</description>
    <formula>Organization__r.Website</formula>
    <label>Organization Website</label>
    <type>Text</type>
</CustomField>