force-app/main/default/objects/Membership_Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the membership or subscription. Part of approval process.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
                <default>true</default>
                <label>Identified</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed/Renewed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Proceeding/Renewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>