force-app/main/default/objects/Membership_Subscription__c/validationRules/MEM001_Lock_Approved_by_Management.validationRule-meta.xml
<ValidationRule>
    <fullName>MEM001_Lock_Approved_by_Management</fullName>
    <active>true</active>
    <description>Only Senior Managers can approve Memberships/Subscriptions</description>
    <errorConditionFormula>(ISNEW()
 || 
ISCHANGED(Approved_by_Management__c))

&amp;&amp;
ISPICKVAL(Approved_by_Management__c, &quot;Yes&quot;)
/*if Approved by is changed to yes*/

&amp;&amp; 
 $Profile.Name &lt;&gt; &quot;Custom: Management&quot;
/*make sure it&apos;s done by management*/</errorConditionFormula>
    <errorMessage>MEM001 You do not have the permission to update this campaign has been Approved by Management</errorMessage>
</ValidationRule>