force-app/main/default/objects/Membership_Subscription__c/validationRules/MEM002_Lock_Approved_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>MEM002_Lock_Approved_Status</fullName>
    <active>true</active>
    <description>Only Senior Managers can approve Memberships/Subscriptions</description>
    <errorConditionFormula>(ISNEW()
|| 
ISCHANGED( Status__c )
)

&amp;&amp;
ISPICKVAL(Status__c , &quot;Status&quot;)
/*if Status is changed to Approved*/

&amp;&amp; 
 $Profile.Name &lt;&gt; &quot;Custom: Management&quot;
/*make sure it&apos;s done by management*/</errorConditionFormula>
    <errorMessage>MEM002 You do not have the permission to update the status to Approved.</errorMessage>
</ValidationRule>